Remove `font-weight` from selected tab styles to fix layout shifts

--- a/src/code-blocks/components/Tabs.css
+++ b/src/code-blocks/components/Tabs.css
@@ -11,7 +11,6 @@
   select:has(option:nth-of-type(7):checked) ~ ul[role='tablist'] li:nth-of-type(7) {
     border-bottom: 2px solid #aaa;
     color: var(--color-text);
-    font-weight: 600;
   }
 }
 
